--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#de7b68</color>
-    <color name="colorPrimaryDark">#7e0208</color>
-    <color name="colorAccent">#156cff</color>
+    <color name="colorPrimaryDark">#3e3e3e</color>
+    <color name="colorPrimary">#dd5145</color>
+    <color name="colorBody">#fe7c70</color>
+    <color name="colorAccent">#dd5246</color>
     <color name="colorTextBody">#ffffff</color>
-    <color name="colorPrimaryText">#ffffff</color>
+    <color name="colorPrimaryText">#000000</color>
 </resources>
+
