--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,8 +4,8 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:titleTextColor="@color/colorPrimaryText"
     android:background="?attr/colorPrimary"
+    app:logo="@drawable/my_todo"
     app:popupTheme="@style/AppTheme.PopupOverlay">
 
 </android.support.v7.widget.Toolbar>
