--- a/app/src/main/res/layout/edit_note_activity.xml
+++ b/app/src/main/res/layout/edit_note_activity.xml
@@ -2,56 +2,77 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@drawable/back"
     android:layout_height="match_parent"
     android:weightSum="1">
     <include layout="@layout/toolbar"/>
 
+
     <LinearLayout
-        android:padding="10dp"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_margin="16dp"
-        android:background="@color/colorBody"
-        android:layout_height="wrap_content">
+        android:layout_margin="10dp"
+        android:layout_height="50dp">
 
         <EditText
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Title "
-            android:layout_gravity="center"
-            android:layout_marginBottom="16dp"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:textColor="@color/colorPrimaryDark"
+            android:layout_margin="10dp"
+            android:hint="Titolo nota"
+            android:textColorHint="@color/colorPrimaryText"
+            android:textStyle="normal"
             android:background="@android:color/transparent"
             android:id="@+id/title_note_et" />
+
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:background="@color/colorPrimaryDark" />
 
     <LinearLayout
-
-        android:padding="10dp"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_margin="16dp"
-        android:background="@color/colorBody"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.50">
+        android:layout_margin="10dp"
+        android:layout_gravity="end"
+        android:layout_height="97dp">
 
         <EditText
-            android:gravity="center_horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:textSize="18dp"
-            android:textColor="@color/colorTextBody"
-            android:hint="Description"
+            android:layout_height="132dp"
+            android:layout_margin="10dp"
+            android:hint="Che cosa hai in mente?"
+            android:textStyle="normal"
+            android:textColorHint="@color/colorPrimaryText"
+            android:gravity="top"
             android:background="@android:color/transparent"
-            android:id="@+id/body_note_et"
-            />
+            android:id="@+id/body_note_et" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:background="@color/colorPrimaryDark" />
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:orientation="vertical">
+
+    <CalendarView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:gravity="center"
+        android:id="@+id/datePicker">
+    </CalendarView>
+
+</LinearLayout>
 
     </LinearLayout>
 
 
-</LinearLayout>
