--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,37 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="@dimen/cardview_default_elevation"
-    android:layout_marginTop="@dimen/material_component_cards_left_and_right_padding"
-    android:layout_marginRight="@dimen/material_component_cards_left_and_right_padding"
+    android:layout_margin="7dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:elevation="12dp"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:padding="@dimen/material_component_cards_left_and_right_padding"
-        android:background="@color/colorPrimary"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorBody">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
+            android:textColor="@color/colorPrimaryText"
             android:textSize="18sp"
             android:id="@+id/note_title"
-            android:textColor="@color/colorPrimaryDark"
             android:text="Titolo"/>
 
         <TextView
-            android:paddingTop="7dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/note_body"
-            android:textStyle="italic"
-            android:textColor="@color/colorTextBody"
-            android:text="oioioioioioio"/>
+            android:text="adasiodhaiosdhioasdhioasihddaios"/>
+
+
     </LinearLayout>
+
+
+
 
 </android.support.v7.widget.CardView>
