--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,8 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
-    app:logo="@drawable/my_todo"
-    app:popupTheme="@style/AppTheme.PopupOverlay">
-
-</android.support.v7.widget.Toolbar>
-
+    app:popupTheme="@style/AppTheme.PopupOverlay" />
