--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="7dp"
+    android:layout_margin="3dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/note"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:padding="@dimen/material_component_cards_left_and_right_padding"
-        android:layout_height="match_parent"
-        android:background="@color/colorBody">
+        android:layout_height="match_parent">
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/note_body"
             android:text="adasiodhaiosdhioasdhioasihddaios"/>
-
+        
 
     </LinearLayout>
 
