--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_share"
+        android:orderInCategory="1"
+        android:title="@string/action_share" />
+    <item
         android:id="@+id/action_edit"
-        android:orderInCategory="100"
+        android:orderInCategory="2"
         android:title="@string/action_edit"/>
     <item
         android:id="@+id/action_delete"
-        android:orderInCategory="100"
+        android:orderInCategory="3"
         android:title="@string/delete"
         />
 
 
 
-
 </menu>
+
